--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
       </main>
       <footer class="footer">
-        <h2 class="footer__content">2024 &#xa9 Spots</h2>
+        <h2 class="footer__content">2024 &#xa9; Spots</h2>
       </footer>
     </div>
   </body>
